<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="E_CoEService" Id="{eae46309-7e6d-4c21-8355-604aebfe5389}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE E_CoEService : 
(
	NoService := 0,	
	CoERead := 1,
	CoEWrite := 2
	
)WORD;
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>